--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.visualpathit</groupId>
-    <artifactId>webapp</artifactId>
+    <artifactId>zhajili_webapp</artifactId>
     <packaging>war</packaging>
-    <version>v2</version>
+    <version>v1</version>
     <name>Zeynal Hajili Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
