--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -92,7 +92,7 @@ pipeline{
                   artifacts: [
                     [artifactId: 'zhajili-DevOps',
                      classifier: '',
-                     file: 'target/javaapp-v2.war'+ "${env.BUILD_ID}",
+                     file: "target/javaapp-v2.war",
                      type: 'war']
                   ]
                 )
