--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -20,6 +20,10 @@ pipeline{
         NEXUS_LOGIN = "nexuslogin"
         SONARSCANNER = "sonarscanner"
         SONARSERVER = "sonarserver"
+        registryCredentials = "ecr-us-east-1:cicdjenkins"
+        imagename = "866308211434.dkr.ecr.us-east-1.amazonaws.com/zhajili_devops"
+        applicationRegistry = "https://866308211434.dkr.ecr.us-east-1.amazonaws.com/zhajili_devops"
+
 
     }
 
@@ -97,6 +101,23 @@ pipeline{
                   ]
                 )
             }
+        }
+        stage("Build Docker Image"){
+            steps{
+                script{
+                    dockerImage = docker.build(imagename + ":$BUILD_ID", "./Docker-files/app/multistage/Dockerfile")
+                }
+            }
+        stage("Upload Docker to ECR"){
+            steps{
+                script{
+                    docker.withRegistry (applicationRegistry,registryCredentials){
+                        dockerImage.push("$BUILD_ID")
+                        dockerImage.push("latest")
+                    }
+                }
+            }
+        }
         }
     }
     post {
