--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -105,7 +105,7 @@ pipeline{
         stage("Build Docker Image"){
             steps{
                 script{
-                    dockerImage = docker.build(imagename + ":$BUILD_ID", "./Docker-files/app/multistage/Dockerfile")
+                    dockerImage = docker.build(imagename + ":$BUILD_ID" + ":$BUILD_TIMESTAMP","./Docker-files/app/multistage/Dockerfile")
                 }
             }
         }
