--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -105,7 +105,7 @@ pipeline{
         stage("Build Docker Image"){
             steps{
                 script{
-                    dockerImage = docker.build(imagename + ':$BUILD_ID' + ':king',"./Docker-files/app/multistage/Dockerfile")
+                    dockerImage = docker.build(imagename,"./Docker-files/app/multistage/Dockerfile")
                 }
             }
         }
