--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline{
     agent any
     tools{
         maven "MAVEN3"
-        jdk "OracleJDK8"
+        jdk "JDK"
     }
     environment{
         SNAP_REPO = "devops-snapshot"
