fix the bug for Jenkinsfile

--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -109,16 +109,16 @@ pipeline{
                 }
             }
         }
-        // stage("Upload Docker to ECR"){
-        //     steps{
-        //         script{
-        //             docker.withRegistry (applicationRegistry,registryCredentials){
-        //                 dockerImage.push("$BUILD_ID")
-        //                 dockerImage.push("latest")
-        //             }
-        //         }
-        //     }
-        // }
+        stage("Upload Docker to ECR"){
+            steps{
+                script{
+                    docker.withRegistry (applicationRegistry,registryCredentials){
+                        dockerImage.push("$BUILD_ID")
+                        dockerImage.push("latest")
+                    }
+                }
+            }
+        }
     }
     post {
     always {
