fix the bug for Jenkinsfile

--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -114,8 +114,8 @@ pipeline{
                 script{
                     docker.withRegistry (applicationRegistry,registryCredentials){
                         dockerImage.push("$BUILD_ID")
-                        dockerImage.push("$BUILD_TIMESTAMP")
-                        // dockerImage.push("latest")
+                        // dockerImage.push("$BUILD_TIMESTAMP")
+                        dockerImage.push("latest")
                     }
                 }
             }
