--- a/StagingPipeline/Jenkinsfile
+++ b/StagingPipeline/Jenkinsfile
@@ -105,7 +105,7 @@ pipeline{
         stage("Build Docker Image"){
             steps{
                 script{
-                    dockerImage = docker.build(imagename + ":$BUILD_ID","./Docker-files/app/multistage/")
+                    dockerImage = docker.build(imagename + ":$BUILD_ID" + ":$BUILD_TIMESTAMP","./Docker-files/app/multistage/")
                 }
             }
         }
@@ -114,7 +114,7 @@ pipeline{
                 script{
                     docker.withRegistry (applicationRegistry,registryCredentials){
                         dockerImage.push("$BUILD_ID")
-                        dockerImage.push("$BUILD_TIMESTAMP")
+                        // dockerImage.push("$BUILD_TIMESTAMP")
                         dockerImage.push("latest")
                     }
                 }
