--- a/ProductionPipeline/Jenkinsfile
+++ b/ProductionPipeline/Jenkinsfile
@@ -6,97 +6,25 @@ pipeline{
     agent any
     tools{
         maven "MAVEN3"
-        jdk "OracleJDK8"
+        jdk "JDK"
     }
     environment{
-        SNAP_REPO = "devops-snapshot"
-        NEXUS_USER = "admin"
-        NEXUS_PASS = "Krakow123"
-        RELEASE_REPO = "devops-release"
-        CENTRAL_REPO = "devops-proxy"
-        NEXUSIP = "172.18.169.33"
-        NEXUSPORT = "8081"
-        NEXUS_GRP_REPO = "devops-group"
-        NEXUS_LOGIN = "nexuslogin"
-        SONARSCANNER = "sonarscanner"
-        SONARSERVER = "sonarserver"
+
+        ecs_cluster_name = "production"
+        service_name = "PRODUCTION-SERVICE"
 
     }
 
     stages{
-        stage("BUILD"){
-            //step to skip Unit Tests and pass parameters from settings.xml and install dependencies locally.
-            steps {
-                sh 'mvn -s settings.xml -DskipTests install'
-            }
-            post{
-                success {
-                echo "Now archiving"
-                archiveArtifacts artifacts: '**/*.war'
-
-                }
-            }
-        }
-        stage("UNIT TEST"){
-            // Execute Unit Test
-            steps {
-                sh 'mvn -s settings.xml test'
-            }
-
-
-        }
-        stage("CODE ANALYSIS WITH CHECKSTYLE"){
-            // Execute Checkstyle analysis and generates a report on violations.
-            steps {
-                sh "mvn -s settings.xml checkstyle:checkstyle"
-            }    
-    
-        }
-        stage('CODE ANALYSIS with SONARQUBE') {
-          
-		  environment {
-             scannerHome = tool "${SONARSCANNER}"
-          }
-
-          steps {
-            withSonarQubeEnv("${SONARSCANNER}") {
-               sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-                   -Dsonar.projectName=vprofile-repo \
-                   -Dsonar.projectVersion=1.0 \
-                   -Dsonar.sources=src/ \
-                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-                }
-            }
-        }
-        stage("QUALITY GATE"){
+        
+        stage("Deploy to ECS Production"){
             steps{
-                timeout(time: 1, unit: 'HOURS') {
-                waitForQualityGate abortPipeline: true
-                }
+               withAWS(credentials: "cicdjenkins",region: "us-east-1" ){
+                // force to delete old container deploy new one via service
+                sh 'aws ecs update-service --cluster ${ecs_cluster_name} --service ${service_name} --force-new-deployment'
+               }
             }
 
-        }
-        stage("UPLOAD ARTIFACT TO NEXUS"){
-            steps{
-                nexusArtifactUploader(
-                  nexusVersion: 'nexus3',
-                  protocol: 'http',
-                  nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-                  groupId: 'Production',
-                  version: "${env.BUILD_ID}-${env.BUILD_TIMESTAMP}",
-                  repository: "${RELEASE_REPO}",
-                  credentialsId: "${NEXUS_LOGIN}",
-                  artifacts: [
-                    [artifactId: 'zhajili-DevOps',
-                     classifier: '',
-                     file: 'target/javaapp-v2.war',
-                     type: 'war']
-                  ]
-                )
-            }
         }
     }
     post {
